--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% load static %}
+{% load static %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -18,10 +18,10 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="stylesheet" href="fonts/font-awesome/css/all.min.css" />
-    <link rel="stylesheet" href="fonts/icomoon2/style.css" />
-    <link rel="stylesheet" href="fonts/icomoon1/style.css" />
+    <link rel="stylesheet" href="{% static 'style.css' %}" />
+    <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/all.min.css' %}" />
+    <link rel="stylesheet" href="{% static 'fonts/icomoon2/style.css' %}" />
+    <link rel="stylesheet" href="{% static 'fonts/icomoon1/style.css' %}" />
   </head>
 
   <body>
@@ -64,7 +64,7 @@
             </ul>
           </div>
           <a class="mobile-logo-img" href="index.html">
-            <img src="img/png/logo.png" alt="logo" width="172" height="45" />
+            <img src="{% static 'img/png/logo.png' %}" alt="logo" width="172" height="45" />
           </a>
           <div class="m-login">
             <a href="/"><i class="icon-user icons"></i><span>Login</span></a>
@@ -73,7 +73,7 @@
         <header class="fl-header fl-header-single fl-header-type1">
           <div class="nav-logo d-flex align-items-center">
             <a class="logo-img" href="index.html">
-              <img src="img/png/logo.png" alt="logo" width="172" height="45" />
+              <img src="{% static 'img/png/logo.png' %}" alt="logo" width="172" height="45" />
             </a>
           </div>
           <nav class="fl-mega-menu nav-menu">
@@ -278,27 +278,27 @@
                   <ul class="social d-flex">
                     <li>
                       <a href="#">
-                        <img src="img/svg/icon-f.svg" alt="facebook" />
+                        <img src="{% static 'img/svg/icon-f.svg' %}" alt="facebook" />
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        <img src="img/svg/icon-t.svg" alt="twitter" />
+                        <img src="{% static 'img/svg/icon-t.svg' %}" alt="twitter" />
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        <img src="img/svg/icon-g+.svg" alt="g+" />
+                        <img src="{% static 'img/svg/icon-g+.svg' %}" alt="g+" />
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        <img src="img/svg/icon-in.svg" alt="in" />
+                        <img src="{% static 'img/svg/icon-in.svg' %}" alt="in" />
                       </a>
                     </li>
                     <li>
                       <a href="#">
-                        <img src="img/svg/icon-v.svg" alt="v" />
+                        <img src="{% static 'img/svg/icon-v.svg' %}" alt="v" />
                       </a>
                     </li>
                   </ul>
@@ -328,7 +328,7 @@
                     <a href="#">
                       <div class="d-flex flex-wrap card-list align-items-start">
                         <img
-                          src="img/listing-1-small.jpg"
+                          src="{% static 'img/listing-1-small.jpg' %}"
                           width="60"
                           height="60"
                           alt="list-small"
@@ -399,13 +399,13 @@
         </div>
       </footer>
     </div>
-    <script src="assest/jquery.js"></script>
-    <script src="assest/jquery-migrate-1.2.1.js"></script>
-    <script src="assest/uikit.min.js"></script>
-    <script src="assest/slick.min.js"></script>
-    <script src="assest/modernizr.custom.js"></script>
-    <script src="assest/jquery.dlmenu.js"></script>
-    <script src="assest/bootstrap.js"></script>
-    <script src="assest/custom.js"></script>
+    <script src="{% static 'assest/jquery.js' %}"></script>
+    <script src="{% static 'assest/jquery-migrate-1.2.1.js' %}"></script>
+    <script src="{% static 'assest/uikit.min.js' %}"></script>
+    <script src="{% static 'assest/slick.min.js' %}"></script>
+    <script src="{% static 'assest/modernizr.custom.js' %}"></script>
+    <script src="{% static 'assest/jquery.dlmenu.js' %}"></script>
+    <script src="{% static 'assest/bootstrap.js' %}"></script>
+    <script src="{% static 'assest/custom.js' %}"></script>
   </body>
 </html>
