--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -66,7 +66,7 @@
 								
 							</li>
 							<li class="has-submenu">
-								<a href="">Listings <i class="fas fa-chevron-down"></i></a>
+								<a href="{% url 'books:book_list' %}">books <i class="fas fa-chevron-down"></i></a>
 								<ul class="submenu">
 								    <li><a href="listing-grid.html">Listing Grid</a></li>
 								    <li><a href="listing-grid-sidebar.html">Listing Grid Sidebar</a></li>
@@ -400,6 +400,9 @@
 	
 	<!-- Custom JS -->
 	<script src="{% static 'assets/js/script.js' %}"></script>
+	
+	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6adZVdzTvBpE2yBRK8cDfsss8QXChK0I"></script>
+    <script src="{% static 'assets/js/map.js' %}"></script>
 	
 </body>
 </html>
