included accounts module

--- a/frontend/templates/books_listing.html
+++ b/frontend/templates/books_listing.html
@@ -68,7 +68,7 @@
                                                     </div>																	  
 												    <div class="blog-author"> 
 													    <div class="blog-author-img">
-														   <img src="assets/img/profiles/avatar-01.jpg" alt="author">
+														   <img src="{% static 'assets/img/profiles/avatar-01.jpg' %}" alt="author">
 														 </div>													  
 												        <a href="javascript:void(0)">John Doe</a>
 												    </div>
@@ -120,7 +120,7 @@
                                                     </div>																	  
 											        <div class="blog-author"> 
 													   <div class="blog-author-img">
-										       	          <img src="assets/img/profiles/avatar-10.jpg" alt="author">
+										       	          <img src="{% static 'assets/img/profiles/avatar-10.jpg' %}" alt="author">
 												        </div>
 													     <a href="javascript:void(0)">Orlando Diggs</a>
 													</div>
@@ -172,7 +172,7 @@
                                                    </div>																	  
 											       <div class="blog-author"> 
 												       <div class="blog-author-img">
-														   <img src="assets/img/profiles/avatar-04.jpg" alt="author">
+														   <img src="{% static 'assets/img/profiles/avatar-04.jpg' %}" alt="author">
 														 </div>
 													    <a href="javascript:void(0)">Kate Morrison</a>
 												   </div>
@@ -224,7 +224,7 @@
                                               </div>																	  
 											  <div class="blog-author"> 
 											       <div class="blog-author-img">
-										       	       <img src="assets/img/profiles/avatar-06.jpg" alt="author">
+										       	       <img src="{% static 'assets/img/profiles/avatar-06.jpg' %}" alt="author">
 												     </div>												  
 												  <a href="javascript:void(0)">Koray Okumus</a>
 										      </div>
@@ -276,7 +276,7 @@
                                                     </div>																	  
 											        <div class="blog-author"> 
 													  <div class="blog-author-img">
-										       	       <img src="assets/img/profiles/avatar-05.jpg" alt="author">
+										       	       <img src="{% static 'assets/img/profiles/avatar-05.jpg' %}" alt="author">
 												     </div>													 
 													  <a href="javascript:void(0)">Ava Wright</a>
 													</div>
@@ -328,7 +328,7 @@
                                                     </div>																	  
 											        <div class="blog-author"> 
 													    <div class="blog-author-img">
-														   <img src="assets/img/profiles/avatar-08.jpg" alt="author">
+														   <img src="{% static 'assets/img/profiles/avatar-08.jpg' %}" alt="author">
 														 </div>
 													     <a href="javascript:void(0)">Eve Leroy</a>
 													</div>
@@ -380,7 +380,7 @@
                                                     </div>																	  
 													<div class="blog-author"> 
 													   <div class="blog-author-img">
-														   <img src="assets/img/profiles/avatar-09.jpg" alt="author">
+														   <img src="{% static 'assets/img/profiles/avatar-09.jpg' %}" alt="author">
 														 </div>
 													    <a href="javascript:void(0)">Zahir Mays</a>
 													</div>
@@ -432,7 +432,7 @@
                                                     </div>																	  
 												    <div class="blog-author"> 
 													   <div class="blog-author-img">
-										       	         <img src="assets/img/profiles/avatar-10.jpg" alt="author">
+										       	         <img src="{% static 'assets/img/profiles/avatar-10.jpg' %}" alt="author">
 												       </div>
 													   <a href="javascript:void(0)">Zahir Mays</a>
 													</div>
