included accounts module

--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -66,14 +66,8 @@
 								
 							</li>
 							<li class="has-submenu">
-								<a href="{% url 'books:book_list' %}">books <i class="fas fa-chevron-down"></i></a>
-								<ul class="submenu">
-								    <li><a href="listing-grid.html">Listing Grid</a></li>
-								    <li><a href="listing-grid-sidebar.html">Listing Grid Sidebar</a></li>
-								    <li><a href="listing-list-sidebar.html">Listing List Sidebar</a></li>
-								    <li><a href="listingmap-list.html">Listing List Map</a></li>
-								    <li><a href="listingmap-grid.html">Listing Grid Map</a></li>								
-								</ul>
+								<a href="{% url 'books:book_list' %}">books <i class="fas "></i></a>
+								
 							</li>
 							<li class="has-submenu">
 								<a href="">Pages <i class="fas fa-chevron-down"></i></a>
