fixed static for auth

--- a/frontend/templates/auth/login.html
+++ b/frontend/templates/auth/login.html
@@ -77,13 +77,13 @@
 									<span class="span-or">Sign in with Social Media Accounts</span>
 								</div>					
 								<div class="social-login">
-									<a href="#" class="btn btn-apple w-100"><img src="assets/img/apple.svg" class="me-1" alt="img">Sign in with Apple</a>
+									<a href="#" class="btn btn-apple w-100"><img src="{% static 'assets/img/apple.svg' %}" class="me-1" alt="img">Sign in with Apple</a>
 								</div>
 								<div class="social-login">
-									<a href="#" class="btn btn-google w-100"><img src="assets/img/google.svg" class="me-1" alt="img">Sign in with Google</a>
+									<a href="#" class="btn btn-google w-100"><img src="{% static 'assets/img/google.svg' %}" class="me-1" alt="img">Sign in with Google</a>
 								</div>
 								<div class="social-login">
-									<a href="#" class="btn btn-facebook w-100 mb-0"><img src="assets/img/facebook.svg" class="me-2" alt="img">Continue with Facebook</a>
+									<a href="#" class="btn btn-facebook w-100 mb-0"><img src="{% static 'assets/img/facebook.svg' %}" class="me-2" alt="img">Continue with Facebook</a>
 								</div>								
 							</form>
 							<!-- /Login Form -->
