--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -108,24 +108,43 @@
 								</ul>
 							</li>
 							<li><a href="contact.html">Contact</a></li>
-							<li class="login-link">
-								<a href="signup.html">Sign Up</a>
-							</li>
-							<li class="login-link">
-								<a href="login.html">Sign In</a>
-							</li>
+							
+							{% if request.user.is_authenticated %}
+								<li class="login-link">
+									<a href="login.html">Logout</a>
+								</li>
+							{% else %}
+								<li class="login-link">
+									<a href="signup.html">Register</a>
+								</li>
+								<li class="login-link">
+									<a href="login.html">Login</a>
+								</li>
+							{% endif %}
+								
 						</ul>
 					</div>
 					<ul class="nav header-navbar-rht">
-						<li class="nav-item">
-							<a class="nav-link header-reg" href="signup.html">Sign Up</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link header-login" href="login.html"> Sign In</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link header-login add-listing" href="add-listing.html"><i class="fa-solid fa-plus"></i> Add Listing</a>
-						</li>
+						
+						{% if request.user.is_authenticated %}
+							<li class="nav-item">
+								<a class="nav-link header-login" href="login.html"> Logout</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link header-login add-listing" href="add-listing.html"><i class="fa-solid fa-plus"></i> Add Listing</a>
+							</li>
+						{% else %}
+							<li class="nav-item">
+								<a class="nav-link header-reg" href="signup.html">Register</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link header-login" href="login.html"> Login</a>
+							</li>
+							<li class="nav-item">
+								<a class="nav-link header-login add-listing" href="add-listing.html"><i class="fa-solid fa-plus"></i> Add Listing</a>
+							</li>
+						{% endif %}
+							
 					</ul>
 				</nav>
 			</div>
