--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -111,14 +111,14 @@
 							
 							{% if request.user.is_authenticated %}
 								<li class="login-link">
-									<a href="login.html">Logout</a>
+									<a href="{% url 'accounts:logout' %}">Logout</a>
 								</li>
 							{% else %}
 								<li class="login-link">
-									<a href="signup.html">Register</a>
+									<a href="{% url 'accounts:register' %}">Register</a>
 								</li>
 								<li class="login-link">
-									<a href="login.html">Login</a>
+									<a href="{% url 'accounts:login' %}">Login</a>
 								</li>
 							{% endif %}
 								
@@ -128,20 +128,17 @@
 						
 						{% if request.user.is_authenticated %}
 							<li class="nav-item">
-								<a class="nav-link header-login" href="login.html"> Logout</a>
+								<a class="nav-link header-login" href="{% url 'accounts:logout' %}"> Logout</a>
 							</li>
 							<li class="nav-item">
 								<a class="nav-link header-login add-listing" href="add-listing.html"><i class="fa-solid fa-plus"></i> Add Listing</a>
 							</li>
 						{% else %}
 							<li class="nav-item">
-								<a class="nav-link header-reg" href="signup.html">Register</a>
+								<a class="nav-link header-reg" href="{% url 'accounts:register' %}">Register</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link header-login" href="login.html"> Login</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link header-login add-listing" href="add-listing.html"><i class="fa-solid fa-plus"></i> Add Listing</a>
+								<a class="nav-link header-login" href="{% url 'accounts:login' %}"> Login</a>
 							</li>
 						{% endif %}
 							
