--- a/frontend/templates/auth/login.html
+++ b/frontend/templates/auth/login.html
@@ -41,17 +41,18 @@
 							</div>
 							
 							<!-- Login Form -->
-							<form action="dashboard.html">
+							<form action="{% url 'accounts:login' %}" method="POST">
+								{% csrf_token %}
 								<div class="form-group group-img">
 								    <div class="group-img">
 										<i class="feather-mail"></i>
-										<input type="text" class="form-control" placeholder="Email Address">
+										{{login_form.email}}
 									</div>
 								</div>
 								<div class="form-group">
 									<div class="pass-group group-img">
 									    <i class="feather-lock"></i>
-										<input type="password" class="form-control pass-input" placeholder="Password">
+										{{login_form.password}}
 										<span class="toggle-password feather-eye"></span>
 									</div>
 								</div>
@@ -64,27 +65,15 @@
 									</div>									
 									<div class="col-md-6 col-sm-6">
 										<div class="text-md-end">
-											<a class="forgot-link" href="forgot-password.html">Forgot password?</a>
+											<a class="forgot-link" href="#">Forgot password?</a>
 										</div>
 									</div>									
 								</div>
 								<button class="btn btn-primary w-100 login-btn" type="submit">Sign in</button>
 								<div class="register-link text-center">
-									<p>No account yet? <a class="forgot-link" href="signup.html">Signup</a></p>
+									<p>No account yet? <a class="forgot-link" href="{% url 'accounts:register' %}">Signup</a></p>
 								</div>
-								<div class="login-or">
-									<span class="or-line"></span>
-									<span class="span-or">Sign in with Social Media Accounts</span>
-								</div>					
-								<div class="social-login">
-									<a href="#" class="btn btn-apple w-100"><img src="{% static 'assets/img/apple.svg' %}" class="me-1" alt="img">Sign in with Apple</a>
-								</div>
-								<div class="social-login">
-									<a href="#" class="btn btn-google w-100"><img src="{% static 'assets/img/google.svg' %}" class="me-1" alt="img">Sign in with Google</a>
-								</div>
-								<div class="social-login">
-									<a href="#" class="btn btn-facebook w-100 mb-0"><img src="{% static 'assets/img/facebook.svg' %}" class="me-2" alt="img">Continue with Facebook</a>
-								</div>								
+														
 							</form>
 							<!-- /Login Form -->
 											
