--- a/frontend/templates/auth/register.html
+++ b/frontend/templates/auth/register.html
@@ -42,43 +42,50 @@
 							</div>
 							
 							<!-- Login Form -->
-							<form action="login.html">
+							<form action="{% url 'accounts:register' %}" method="POST">
+								{% csrf_token %}
 							    <div class="form-group group-img">
 								    <div class="group-img">
 										<i class="feather-user"></i>
-										<input type="text" class="form-control" placeholder="Full Name">
+										{{register_form.first_name}}
+									</div>
+								</div>
+								<div class="form-group group-img">
+								    <div class="group-img">
+										<i class="feather-user"></i>
+										{{register_form.last_name}}
 									</div>
 								</div>
 								<div class="form-group group-img">
 								    <div class="group-img">
 										<i class="feather-mail"></i>
-										<input type="text" class="form-control" placeholder="Email Address">
+										{{register_form.email}}
+									</div>
+								</div>
+								<div class="form-group group-img">
+								    <div class="group-img">
+										<i class="feather-user"></i>
+										{{register_form.phone_number}}
 									</div>
 								</div>
 								<div class="form-group">
 									<div class="pass-group group-img">
 									    <i class="feather-lock"></i>
-										<input type="password" class="form-control pass-input" placeholder="Password">
+										{{register_form.password}}
+										<span class="toggle-password feather-eye"></span>
+									</div>
+								</div>
+								<div class="form-group">
+									<div class="pass-group group-img">
+									    <i class="feather-lock"></i>
+										{{register_form.confirm_password}}
 										<span class="toggle-password feather-eye"></span>
 									</div>
 								</div>
 								<button class="btn btn-primary w-100 login-btn" type="submit">Create Account</button>
 								<div class="register-link text-center">
-									<p>Already have an account? <a class="forgot-link" href="login.html">Sign In</a></p>
-								</div>
-								<div class="login-or">
-									<span class="or-line"></span>
-									<span class="span-or">Sign in with Social Media Accounts</span>
-								</div>					
-								<div class="social-login">
-									<a href="#" class="btn btn-apple w-100"><img src="{% static 'assets/img/apple.svg' %}" class="me-1" alt="img">Sign in with Apple</a>
-								</div>
-								<div class="social-login">
-									<a href="#" class="btn btn-google w-100"><img src="{% static 'assets/img/google.svg' %}" class="me-1" alt="img">Sign in with Google</a>
-								</div>
-								<div class="social-login">
-									<a href="#" class="btn btn-facebook w-100 mb-0"><img src="{% static 'assets/img/facebook.svg' %}" class="me-2" alt="img">Continue with Facebook</a>
-								</div>								
+									<p>Already have an account? <a class="forgot-link" href="{% url 'accounts:login' %}">Sign In</a></p>
+								</div>							
 							</form>
 							<!-- /Login Form -->
 											
