--- a/frontend/templates/auth/register.html
+++ b/frontend/templates/auth/register.html
@@ -82,12 +82,12 @@
 										<span class="toggle-password feather-eye"></span>
 									</div>
 								</div>
-								<div class="form-check">
-									{{register_form.get_location}}
-									<label class="form-check-label" for="flexCheckDefault">
-									  Get My current location
-									</label>
-								  </div>
+								<div class="form-group group-img">
+								    <div class="group-img">
+										<i class="feather-user"></i>
+										{{register_form.your_location}}
+									</div>
+								</div>
 								  
 								<button class="btn btn-primary w-100 login-btn" type="submit">Create Account</button>
 								<div class="register-link text-center">
