--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -65,9 +65,12 @@
 								<a href="{% url 'core:index' %}">Home <i class="fas "></i></a>
 								
 							</li>
+
 							<li class="has-submenu">
 								<a href="{% url 'books:book_list' %}">books <i class="fas "></i></a>
-								
+							</li>
+							<li class="has-submenu">
+								<a href="{% url 'books:book_list' %}">Members <i class="fas "></i></a>
 							</li>
 							<li class="has-submenu">
 								<a href="">Pages <i class="fas fa-chevron-down"></i></a>
@@ -131,7 +134,7 @@
 								<a class="nav-link header-login" href="{% url 'accounts:logout' %}"> Logout</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link header-login add-listing" href="add-listing.html"><i class="fa-solid fa-plus"></i> Add Listing</a>
+								<a class="nav-link header-login add-listing" href="add-listing.html"><i class="fa-solid fa-plus"></i> Add Book</a>
 							</li>
 						{% else %}
 							<li class="nav-item">
