order by location

--- a/frontend/templates/books_listing.html
+++ b/frontend/templates/books_listing.html
@@ -50,7 +50,7 @@
 								<div class="row ">
 								    
 									{% for book in nearby_books %}
-									<div class="col-lg-3 col-md-4">
+									<div class="col-lg-3 col-md-4 col-sm-6 col-xs-6">
 								        <div class="card">
 								            <div class="blog-widget">
 										     <div class="blog-img">
@@ -73,10 +73,6 @@
 													   </div>
 													</div>
 													<div class="amount-details">
-													    <div class="amount">
-													      <span class="validrate">$350</span>
-													      <span>$450</span>
-													    </div>
 														<div class="ratings">
 															<span>4.7</span> (50)
 												        </div>														
