--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -30,6 +30,13 @@
 
 	<!-- Main CSS -->
 	<link rel="stylesheet" href="{% static 'assets/css/style.css' %}">
+	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css" integrity="sha256-kLaT2GOSpHechhsozzB+flnD+zUyjE2LlfWPgU04xyI=" crossorigin=""/>
+	<script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js" integrity="sha256-WBkoXOwTeyKclOHuWtc+i2uENFpDZ9YPdf5Hf+D7ewM=" crossorigin=""></script>
+	
+	{% block css %}
+		
+	{% endblock css %}
+		
 	
 </head>
 <body>
@@ -373,7 +380,11 @@
 		</svg>
 	</div>
 	<!-- scrollToTop end -->
-	
+
+	{% block script %}
+		
+	{% endblock script %}
+		
 	
 	<!-- jQuery -->
 	<script src="{% static 'assets/js/jquery-3.6.3.min.js' %}"></script>
@@ -399,8 +410,6 @@
 	<!-- Custom JS -->
 	<script src="{% static 'assets/js/script.js' %}"></script>
 	
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD6adZVdzTvBpE2yBRK8cDfsss8QXChK0I"></script>
-    <script src="{% static 'assets/js/map.js' %}"></script>
 	
 </body>
 </html>
