--- a/frontend/templates/books_listing.html
+++ b/frontend/templates/books_listing.html
@@ -4,6 +4,14 @@
 {% block title %} Book Listing {% endblock title %}
 
 
+{% block css %}
+	<style>
+		#map-custom { height: 100%; }
+	</style>
+{% endblock css %}
+	
+
+
 {% block body %}
 
 
@@ -69,7 +77,7 @@
                                                     <h6><a href="service-details.html">{{ book.title}}</a></h6>																	 
 													<div class="blog-location-details">
 													   <div class="location-info">
-													     <i class="feather-map-pin"></i> Los Angeles
+													     <i class="feather-map-pin"></i> {{book.city}}
 													   </div>
 													</div>
 													<div class="amount-details">
@@ -125,8 +133,15 @@
 											  
                         </div>
 				   </div>
-				   <div class="col-lg-6 map-right">
-				        <div id="map" class="map-listing"></div>
+				   <div class="col-lg-6">
+
+				        <div id="map-custom">
+							
+						</div>
+
+
+
+
                         <div class="showfilter">
 						        <button class="btn filterbtn">								   
 								    <span class="showfilter-btn"><img src="assets/img/details-icon.svg" alt="details-icon"> Show Filters</span>
@@ -234,6 +249,35 @@
 			</div>			  
 		</div>
 		<!-- /Main Content Section -->
+
+		
+		{% block script %}
+			<script>
+				var map = L.map('map-custom').setView([{{ book_owner.location.y }}, {{ book_owner.location.x }}], 13);
+				L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+					attribution: '&copy; <a href="https://www.openstreetmap.org/">OpenStreetMap</a> contributors',
+					maxZoom: 18,
+				}).addTo(map);
+			
+				{% for book in nearby_books %}
+					var marker = L.marker([{{ book.location.y }}, {{ book.location.x }}]).addTo(map);
+					marker.bindPopup("<b>{{ book.title }}</b><br>{{ book.description }}<br><a href=''>View details</a>");
+				{% endfor %}
+
+				// red marker for book owner
+				var redIcon = new L.Icon({
+					iconUrl: 'https://raw.githubusercontent.com/pointhi/leaflet-color-markers/master/img/marker-icon-2x-red.png',
+					shadowUrl: 'https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/images/marker-shadow.png',
+					iconSize: [25, 41],
+					iconAnchor: [12, 41],
+					popupAnchor: [1, -34],
+					shadowSize: [41, 41]
+				});
+				var marker = L.marker([{{ book_owner.location.y }}, {{ book_owner.location.x }}], {icon: redIcon}).addTo(map);
+			</script>
+		
+		{% endblock script %}
+			
     
 {% endblock body %}
     
