--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -28,12 +28,9 @@
                                            <div class="form-group">																							
                                                <select class="form-control select category-select">													
                                                    <option value="">Choose Category</option>
-                                                   <option>Computer</option>
-                                                   <option>Automobile</option>
-                                                   <option>Car Wash</option>
-                                                   <option>Cleaning</option>
-                                                   <option>Electrical</option>
-                                                   <option>Construction</option>
+                                                    {% for category in categories %}
+                                                        <option>{{category.name}}</option>
+                                                    {% endfor %}
                                                </select>
                                            </div>
                                        </div>
@@ -72,7 +69,7 @@
                 <div class="row align-items-center">
                        <div class="col-md-6 aos aos-init aos-animate" data-aos="fade-up">
                            <h2>Our  <span class="title-left">Cat</span>egory</h2>
-                           <p>Buy and Sell Everything from Used Our Top Category</p>
+                           <p>Share Books from Used Our Top Category</p>
                        </div>
                        <div class="col-md-6 text-md-end aos aos-init aos-animate" data-aos="fade-up">
                            <a href="categories.html" class="btn  btn-view">View All</a>
@@ -80,90 +77,17 @@
                 </div>			     
               </div>	
                <div class="row">
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>Automotive</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>Electronics</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>Fashion Style</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>Health Care</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>Job Board</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>Education</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>Real Estate</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>Travel</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>Sports & Game</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>Magazines</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>Pet & Animal</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
-                   <div class="col-lg-2 col-md-3 col-sm-6">
-                      <a href="categories.html" class="category-links">
-                         <h5>House Hold</h5>
-                         <span>09 Ads</span>
-                         
-                      </a> 
-                   </div>
+                {% for category in categories  %}
+                    <div class="col-lg-2 col-md-3 col-sm-6">
+                        <a href="categories.html" class="category-links">
+                        <h5>{{ category.name }}</h5>
+                        <span>{{ category.book_count }} Books</span>
+                        
+                        </a> 
+                    </div>
+                {% endfor %}
+                    
+                  
                </div>			   
            </div>		
        </section>		
@@ -174,11 +98,11 @@
                 <div class="section-heading">
                         <div class="row align-items-center">
                             <div class="col-md-6 aos aos-init aos-animate" data-aos="fade-up">
-                                    <h2>Lat<span class="title-right">est</span> Ads</h2>
+                                    <h2>Recommen<span class="title-right">ded</span> Books</h2>
                                     <p>checkout these latest cool ads from our members</p>
                             </div>
                             <div class="col-md-6 text-md-end aos aos-init aos-animate" data-aos="fade-up">
-                                <a href="service-details.html" class="btn  btn-view">View All</a>
+                                <a href="{% url 'books:book_list' %}" class="btn  btn-view">View All</a>
                             </div>		
                         </div>
                 </div>
@@ -225,83 +149,6 @@
 </section>	
 <!-- /Latest Ads Section -->
        
-       <!-- Popular Location Section -->
-       <section class="popular-locations">	
-           <div class="popular-circleimg">
-                <img class="img-fluid" src="{% static 'assets/img/popular-img.png' %}" alt="Popular-sections">
-           </div>
-           <div class="container">		
-                <div class="section-heading">
-                   <h2>Popular <span>Loc</span>ations</h2>
-                   <p>Start by selecting your favuorite location and explore the goods</p>
-               </div>
-               <div class="location-details d-flex">	
-                   <div class="row">				
-                    <div class="location-info col-lg-4 col-md-6">
-                       <div class="location-info-details d-flex align-items-center">
-                         
-                         <div class="location-content">
-                             <a href="listing-grid-sidebar.html">USA</a>
-                             <p>20+ Ads Posted</p>
-                             <a href="listing-grid-sidebar.html" class="view-detailsbtn">View Details</a>
-                         </div>
-                       </div>
-                    </div>	
-                    <div class="location-info col-lg-4 col-md-6">
-                       <div class="location-info-details d-flex align-items-center">
-                        
-                         <div class="location-content">
-                             <a href="listing-grid-sidebar.html">Canada</a>
-                             <p>20+ Ads Posted</p>
-                             <a href="listing-grid-sidebar.html" class="view-detailsbtn">View Details</a>
-                         </div>
-                       </div>
-                    </div>	
-                    <div class="location-info col-lg-4 col-md-6">
-                       <div class="location-info-details d-flex align-items-center">
-                         <div class="location-content">
-                             <a href="listing-grid-sidebar.html">China</a>
-                             <p>20+ Ads Posted</p>
-                             <a href="listing-grid-sidebar.html" class="view-detailsbtn">View Details</a>
-                         </div>
-                       </div>
-                    </div>				
-                    <div class="location-info col-lg-4 col-md-6">
-                       <div class="location-info-details d-flex align-items-center">
-                        
-                         <div class="location-content">
-                             <a href="listing-grid-sidebar.html">United Kingdom</a>
-                             <p>20+ Ads Posted</p>
-                             <a href="listing-grid-sidebar.html" class="view-detailsbtn">View Details</a>
-                         </div>
-                        </div>
-                    </div>				   
-                    <div class="location-info col-lg-4 col-md-6">
-                       <div class="location-info-details d-flex align-items-center">
-                         
-                         <div class="location-content">
-                             <a href="listing-grid-sidebar.html">Australia</a>
-                             <p>20+ Ads Posted</p>
-                             <a href="listing-grid-sidebar.html" class="view-detailsbtn">View Details</a>
-                         </div>
-                       </div>
-                    </div>
-                    <div class="location-info col-lg-4 col-md-6">
-                       <div class="location-info-details d-flex align-items-center">
-                         
-                         <div class="location-content">
-                           <a href="listing-grid-sidebar.html">France</a>
-                           <p>20+ Ads Posted</p>
-                           <a href="listing-grid-sidebar.html" class="view-detailsbtn">View Details</a>
-                         </div>
-                       </div>							 
-                    </div>				 
-                   </div>				 
-               </div>
-                <div class="align-items-center"><a href="listing-grid-sidebar.html" class="browse-btn">Browse Ads</a></div>
-           </div>
-       </section>		
-       <!-- /Popular Locations Section -->
        
        <!-- Latest Ads Section -->
         <section class="latestad-section grid-view featured-slider">	
@@ -309,7 +156,7 @@
                        <div class="section-heading">
                                <div class="row align-items-center">
                                    <div class="col-md-6 aos aos-init aos-animate" data-aos="fade-up">
-                                           <h2>Lat<span class="title-right">est</span> Ads</h2>
+                                           <h2>Reco<span class="title-right">est</span> Ads</h2>
                                            <p>checkout these latest cool ads from our members</p>
                                    </div>
                                    <div class="col-md-6 text-md-end aos aos-init aos-animate" data-aos="fade-up">
@@ -360,50 +207,24 @@
        </section>	
        <!-- /Latest Ads Section -->
        
-       <!-- CTA Section -->
-       <section class="cta-section">
-           <div class="container">
-               <div class="row align-items-center">
-                    <div class="col-lg-7">
-                         <div class="cta-content">
-                             <h3>Earn Cash by <span>Selling</span> <br>
-                             or Find Anything you desire							     
-                             </h3>
-                             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humo or randomised words which don't look even slightlys</p>
-                             <div class="cta-btn">
-                                <a href="add-listing.html" class="btn-primary postad-btn">Post Your Ads</a>
-                                <a href="listing-grid-sidebar.html" class="browse-btn">Browse Ads</a>							  
-                             </div>
-                         </div>
-                    </div>
-                    <div class="col-lg-5">
-                          <div class="cta-img">
-                               <img src="assets/img/cta-img.png" class="img-fluid" alt="CTA">
-                          </div>
-                    </div>
-               </div>
-           </div>
-       </section>		
-       <!-- /CTA Section -->
-       
        
        <!-- Partners Section -->
        <div class="partners-section">
            <div class="container">
                 <p class="partners-heading">Over 5,26,000+ Sponsers being contact with us</p>	
                 <ul class="owl-carousel partnerslist d-flex">
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-1.svg" alt="partners"></a></li>
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-2.svg" alt="partners"></a></li>
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-3.svg" alt="partners"></a></li>
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-4.svg" alt="partners"></a></li>
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-5.svg" alt="partners"></a></li>
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-6.svg" alt="partners"></a></li>
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-1.svg" alt="partners"></a></li>
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-2.svg" alt="partners"></a></li>
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-3.svg" alt="partners"></a></li>
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-4.svg" alt="partners"></a></li>
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-5.svg" alt="partners"></a></li>
-                   <li><a href="javascript:void(0);"><img class="img-fluid" src="assets/img/partners/partners-6.svg" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-1.svg' %}" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-2.svg' %}" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-3.svg' %}" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-4.svg' %}" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-5.svg' %}" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-6.svg' %}" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-1.svg' %}" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-2.svg' %}" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-3.svg' %}" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-4.svg' %}" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-5.svg' %}" alt="partners"></a></li>
+                   <li><a href="javascript:void(0);"><img class="img-fluid" src="{% static 'assets/img/partners/partners-6.svg' %}" alt="partners"></a></li>
                 </ul>
            </div>
        </div>		
