--- a/frontend/templates/books_listing.html
+++ b/frontend/templates/books_listing.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %} Book Listing {% endblock title %}
+{% block title %} Member Listing {% endblock title %}
 
 
 {% block css %}
