--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -20,8 +20,9 @@
                                <p class="explore-text"> <span>Explore top-rated attractions</span></p>
                                 <img src="{% static 'assets/img/arrow-banner.png' %}" class="arrow-img" alt="arrow">
                                 <h1>Let us help you <br>
-                                <span>Find, Buy</span> & Own Dreams</h1>
-                                <p>Countrys most loved and trusted classified ad listing website classified ad.randomised words which don't look even slightly Browse thousand of items near you.</p>
+                                <span>Find, Share</span> & Request Books</h1>
+                                <p>
+                                 With the GeoBooks, Get yourself novels, Stories and more books from your friends.</p>
                                    <div class="search-box">
                                      <form action="listing-grid-sidebar.html" class="d-flex"> 
                                        <div class="search-input line">											
