--- a/frontend/templates/base.html
+++ b/frontend/templates/base.html
@@ -89,7 +89,7 @@
 							{% endif %}
 								
 							
-							<li><a href="contact.html">Contact</a></li>
+							
 							
 							{% if request.user.is_authenticated %}
 								<li class="login-link">
@@ -113,7 +113,7 @@
 								<a class="nav-link header-login" href="{% url 'accounts:logout' %}"> Logout</a>
 							</li>
 							<li class="nav-item">
-								<a class="nav-link header-login add-listing" href="add-listing.html"><i class="fa-solid fa-plus"></i> Add Book</a>
+								<a class="nav-link header-login add-listing" href="{% url 'books:add_book' %}"><i class="fa-solid fa-plus"></i> Add Book</a>
 							</li>
 						{% else %}
 							<li class="nav-item">
